# VulkanStudy

./: ASSET_LICENSE  CMakeLists.txt  compile_shader.bat
headers/: add.h
libraries/: FBXTest.lib  FbxAgent.lib
libraries/includes/: ErrorCodes.h  FbxAgent.h  Model.h  Vector2.h  Vector3.h
models/: box.fbx
shaders/: shader.frag  shader.vert  vert.spv
sources/: HelloTriangleApplication.cpp  HelloTriangleApplication.hpp  main.cpp
sources/sub/: sub.cpp
